[gd_scene load_steps=25 format=3 uid="uid://bt3ngcbslwttq"]

[ext_resource type="Texture2D" uid="uid://bwi13qcvamlk8" path="res://textures/gun/idle/Standding_Hand-1.png" id="1_elibc"]
[ext_resource type="Texture2D" uid="uid://db3vfsgd2brvt" path="res://textures/gun/attack/Arm_Shooting-2.png" id="1_w07g4"]
[ext_resource type="Texture2D" uid="uid://d0374bqjl6nk6" path="res://textures/gun/idle/Standding_Hand-2.png" id="2_8ilnh"]
[ext_resource type="PackedScene" uid="uid://cwenyi5fjdao4" path="res://assets/weapons/gun/bullet.tscn" id="2_12ug1"]
[ext_resource type="Texture2D" uid="uid://fb0faeqcy42a" path="res://textures/gun/attack/Arm_Shooting-3.png" id="2_ewsey"]
[ext_resource type="Texture2D" uid="uid://cpy7oi2q4w6oj" path="res://textures/gun/attack/Arm_Shooting-4.png" id="3_bwjbt"]
[ext_resource type="Texture2D" uid="uid://bdut13xx4hwuq" path="res://textures/gun/idle/Standding_Hand-3.png" id="3_xudxc"]
[ext_resource type="Texture2D" uid="uid://dfveknqnxv5su" path="res://textures/gun/idle/Standding_Hand-4.png" id="4_oawqw"]
[ext_resource type="Texture2D" uid="uid://d1ro8o1a6642t" path="res://textures/gun/running/Walkingg_Hand-1.png" id="8_exvnl"]
[ext_resource type="Texture2D" uid="uid://chn7bw60h8a2m" path="res://textures/gun/jump/Jump-1.png" id="8_yv58i"]
[ext_resource type="Texture2D" uid="uid://wg8k0bu5wy0c" path="res://textures/gun/jump/Jump-2.png" id="9_2h7u4"]
[ext_resource type="Texture2D" uid="uid://c15pojl8vhuvq" path="res://textures/gun/running/Walkingg_Hand-2.png" id="9_n2im7"]
[ext_resource type="Texture2D" uid="uid://bklmhpmux4pd1" path="res://textures/gun/running/Walkingg_Hand-3.png" id="10_pjpuh"]
[ext_resource type="Texture2D" uid="uid://bpcudyvxrig7o" path="res://textures/gun/jump/Jump-3.png" id="10_xdtil"]
[ext_resource type="Texture2D" uid="uid://cth2e2gbrw2vy" path="res://textures/gun/running/Walkingg_Hand-4.png" id="11_uxqhb"]
[ext_resource type="Texture2D" uid="uid://c527v0uv77hj4" path="res://textures/gun/running/Walkingg_Hand-5.png" id="12_40jba"]
[ext_resource type="Texture2D" uid="uid://7s6ufu81yurv" path="res://textures/gun/running/Walkingg_Hand-6.png" id="13_wuxs7"]
[ext_resource type="Texture2D" uid="uid://h8amqx653lbv" path="res://textures/gun/running/Walkingg_Hand-7.png" id="14_q3ciw"]
[ext_resource type="Texture2D" uid="uid://dqlpynudy2d82" path="res://textures/gun/running/Walkingg_Hand-8.png" id="15_sf7dy"]
[ext_resource type="Script" path="res://assets/weapons/gun/gun.gd" id="16_2gvc7"]
[ext_resource type="AudioStream" uid="uid://c707or5donwo7" path="res://assets/weapons/gun/gunshot_light.wav" id="18_wyf2a"]
[ext_resource type="AudioStream" uid="uid://dgkkyokvfu262" path="res://assets/weapons/gun/gunshot_heavy.wav" id="20_3a6wi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_78r3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_w07g4")
}, {
"duration": 1.0,
"texture": ExtResource("2_ewsey")
}, {
"duration": 1.0,
"texture": ExtResource("3_bwjbt")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_xdtil")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_elibc")
}, {
"duration": 1.0,
"texture": ExtResource("2_8ilnh")
}, {
"duration": 1.0,
"texture": ExtResource("3_xudxc")
}, {
"duration": 1.0,
"texture": ExtResource("4_oawqw")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_yv58i")
}, {
"duration": 1.0,
"texture": ExtResource("9_2h7u4")
}, {
"duration": 1.0,
"texture": ExtResource("10_xdtil")
}],
"loop": false,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_exvnl")
}, {
"duration": 1.0,
"texture": ExtResource("9_n2im7")
}, {
"duration": 1.0,
"texture": ExtResource("10_pjpuh")
}, {
"duration": 1.0,
"texture": ExtResource("11_uxqhb")
}, {
"duration": 1.0,
"texture": ExtResource("12_40jba")
}, {
"duration": 1.0,
"texture": ExtResource("13_wuxs7")
}, {
"duration": 1.0,
"texture": ExtResource("14_q3ciw")
}, {
"duration": 1.0,
"texture": ExtResource("15_sf7dy")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ghgvg"]
lifetime_randomness = 0.45
particle_flag_disable_z = true
inherit_velocity_ratio = 1.0
initial_velocity_min = 350.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
damping_min = 50.0
damping_max = 75.0
scale_min = 0.25
scale_max = 0.5
color = Color(0.94902, 0.764706, 0, 1)
hue_variation_min = -0.05
hue_variation_max = 0.05

[node name="gun" type="AnimatedSprite2D" node_paths=PackedStringArray("gunshot_light", "gunshot_standard", "gunshot_heavy")]
sprite_frames = SubResource("SpriteFrames_78r3p")
animation = &"attack"
offset = Vector2(60, 0)
script = ExtResource("16_2gvc7")
gunshot_light = NodePath("gunshot_light")
gunshot_standard = NodePath("gunshot_standard")
gunshot_heavy = NodePath("gunshot_heavy")
bullet_type = ExtResource("2_12ug1")
weapon_range = 150.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(100, -20)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Marker2D"]
self_modulate = Color(2, 2, 2, 1)
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_ghgvg")
lifetime = 0.1
one_shot = true

[node name="gunshot_light" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_wyf2a")
volume_db = -10.0
max_polyphony = 5
bus = &"Gameplay"

[node name="gunshot_standard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_3a6wi")
volume_db = -20.0
pitch_scale = 1.2
max_polyphony = 5
bus = &"Gameplay"

[node name="gunshot_heavy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_3a6wi")
volume_db = -15.0
pitch_scale = 0.9
max_polyphony = 5
bus = &"Gameplay"
